feat: Added location and organizer to events
