# api/oas-doc.yaml
@@ -207,12 +207,13 @@ components:
           type: string
           format: date-time
         eventTags:
-          type: string
+          type: array
+          items:
+            type: string
         eventOrganizer:
           type: string
-        eventSpeaker:
-          type: integer
-          format: int32
+        eventLocation:
+          type: string
     speaker:
       type: object
       required:
@@ -233,6 +234,8 @@ components:
           type: string
         speakerUrls:
           type: array
+          items:
+            type: string
     post:
       type: object
       required:
